...
  @override
  void initState() {
    super.initState();
    slides.add(
      new Slide(
        title: "Welcome to WAP App",
        description:
            "Hello there! We are pleased to meet you and excited for you to meet loving pets."
            '\n'
            "But first let us learn about our WAP vision and mission",
        pathImage: "assets/images/wap_logo.png",
      ),
    );
...
