...
          TextButton(
              onPressed: () async {
                Navigator.pushReplacement(context,
                    MaterialPageRoute(builder: (context) => ProfilePage()));
              },
              child: Text("Skip",
                  key: Key('clickSkip3'),
                  style: TextStyle(
                      color: Colors.white,
                      fontFamily: 'Montserrat',
                      decoration: TextDecoration.underline)))
        ]),
      ),
...
